home content done

--- a/sass/_mobile.scss
+++ b/sass/_mobile.scss
@@ -501,6 +501,7 @@
       .health-descp {
         margin: 10px auto 20px;
       }
+        .home-coolsculp-descp { height: auto; }
       .health-imgholder {
         margin: 0 auto;
       }
@@ -1031,6 +1032,7 @@
         font-size: 19px;
       }
       .health-descp {
+        height: auto;
         margin: 10px auto;
         font-size: 14px;
       }
