--- a/views/content/home.html
+++ b/views/content/home.html
@@ -31,7 +31,7 @@
       <div class="col-md-4 col-sm-6">
         <div class="health-info">
           <h3 class="brand-primary title text-uppercase font-gotham-bold">Health <span class="block">Packages</span></h3>
-          <p class="text-justify health-descp"> Our health packages are a right blend of food with science. whether its managing any kind of health disorder, improving vitamin deficiency, shedding extra kilos  or looking for specialized diet .. we have it all for all age groups.We believe in losing weight in the right manner and not losing hair, immunity, muscle and bone.</p>
+          <p class="text-justify health-descp">Our health packages are a right blend of food with science. whether its managing any kind of health disorder, improving vitamin deficiency, shedding extra kilos  or looking for specialized diet .. we have it all for all age groups.We believe in losing weight in the right manner and not losing hair, immunity, muscle and bone.</p>
           <a href="#/healthpackages" class="btn btn-primary text-uppercase font-gotham-bold letter-space know-more">know more</a>
           <div class="health-imgholder">
             <img src="img/health-package.png" alt="" class="img-responsive">
@@ -41,7 +41,7 @@
       <div class="col-md-4 col-sm-6">
         <div class="health-info">
           <h3 class="brand-yellow title text-uppercase font-gotham-bold">Health <span class="block">Products</span></h3>
-          <p class="text-justify health-descp">We believe your diet needs to be full of variety to motivate you through this journey. For this we have cook books written by our founder Mrs. Suman Agarwal with a team of culinary expert and nutritionist and variety of snacks and munchies. We have a extensive range of vital vitamins  which are introduced to you to maintain immunity, hair, skin and correct deficiencies. These vitamins are also prescribed to manage or alleviate chronic ailments. We also have a range of protein supplements to support strength training. We have electronics like pedometer, weighing scale to help you monitor your health goals.</p>
+          <p class="text-justify health-descp">We have cook books written by our founder Mrs. Suman Agarwal with a team of culinary expert and nutritionist. A variety of snacks and munchies and an extensive range of vital vitamins.  These help to maintain immunity, hair, skin and correct deficiencies r alleviate chronic ailments. Our range of protein supplements help to support strength training. And electronics like pedometer, weighing scale to help you monitor your health goals</p>
           <a href="#/healthproducts/1" class="btn btn-yellow text-uppercase font-gotham-bold letter-space know-more">know more</a>
           <div class="health-imgholder">
             <img src="img/health-products.png" alt="" class="img-responsive">
@@ -51,7 +51,7 @@
       <div class="col-md-4 col-sm-12">
         <div class="health-info">
           <h3 class="brand-blue title text-uppercase font-gotham-bold">cool <span class="block">sculpting</span></h3>
-          <p class="text-justify health-descp">The CoolSculpting procedure eliminates stubborn fat safely and effectively, without surgery or downtime. This fat reduction treatment is the only FDA-cleared procedure.</p>
+          <p class="text-justify health-descp home-coolsculp-descp">The CoolSculpting procedure eliminates stubborn fat safely and effectively, without surgery or downtime. This fat reduction treatment is the only FDA-cleared procedure.</p>
           <a href="#/coolsculpting" class="btn btn-blue text-uppercase font-gotham-bold letter-space know-more">know more</a>
           <div class="health-imgholder">
             <img src="img/cool-sculpting.png" alt="" class="img-responsive">
