--- a/views/content/account.html
+++ b/views/content/account.html
@@ -47,6 +47,9 @@
                         <input type="text" class="form-control" placeholder="City *">
                       </div>
                       <div class="form-group">
+                        <input type="text" class="form-control" placeholder="Pincode *">
+                      </div>
+                      <div class="form-group">
                         <input type="text" class="form-control" placeholder="State *">
                       </div>
                       <div class="form-group">
@@ -78,6 +81,9 @@
                       </div>
                       <div class="form-group">
                         <input type="text" class="form-control" placeholder="City *">
+                      </div>
+                      <div class="form-group">
+                        <input type="text" class="form-control" placeholder="Pincode *">
                       </div>
                       <div class="form-group">
                         <input type="text" class="form-control" placeholder="State *">
