--- a/views/content/healthmanagement.html
+++ b/views/content/healthmanagement.html
@@ -17,7 +17,7 @@
           <div class="managecat text-center">
             <figure>
               <a ui-sref="healthmanagementdetail({id:package.id})">
-                <div class="category-imghold ">
+                <div class="category-imghold round">
                   <img ng-src="{{package.image | serverimage}}" alt="" class="img-responsive round">
                 </div>
                 <figcaption class="text-uppercase brand-brown-dark font-semibold">{{package.name}}</figcaption>
