--- a/views/content/home.html
+++ b/views/content/home.html
@@ -253,7 +253,7 @@
               <span class="text-light">SUMAN</span>
             </h4>
           </div>
-          <h4 class="tips">Ask and get an answer on the healthiest food tips</h4>
+          <h4 class="tips">Get answers to your health &amp; wellness related queries.</h4>
           <form name="asksumanForm">
             <div class="form-group">
               <div class="custom-select">
