--- a/sass/main.scss
+++ b/sass/main.scss
@@ -523,7 +523,9 @@ button {
   .people-weight-count {
     padding-right: 10px;
   }
-  .icon { margin: 0 10px; }
+  .icon {
+    margin: 0 10px;
+  }
   .info {
     border-right: 1px solid $brand-brown-dark;
   }
@@ -800,7 +802,9 @@ button {
     padding: 14px 0 2px;
   }
 }
-.weight .consult-chart { min-height: 76px; }
+.weight .consult-chart {
+  min-height: 76px;
+}
 // .health-tab {
 //   .tab-chart { width: 83%; }
 // }
@@ -2161,7 +2165,9 @@ footer {
 ///end recipe///
 //stats/////
 .choose-prd {
-  select { width: 150px; }
+  select {
+    width: 150px;
+  }
 }
 .calorie-meter {
   margin: 60px 0;
@@ -2170,14 +2176,15 @@ footer {
   color: $brand-brown-dark;
   select {
     padding: 2px 10px;
-      border:2px solid $brand-primary;
-      margin-right: 20px;
+    border: 2px solid $brand-primary;
+    margin-right: 20px;
     background: transparent;
     text-align: center;
   }
 }
-.burn { font-size: 18px; }
-
+.burn {
+  font-size: 18px;
+}
 .calorie-number {
   @include square(65px);
   font-size: 25px;
@@ -2185,24 +2192,32 @@ footer {
   text-align: center;
   @extend .round;
 }
-.kcal { margin: 12px 0 0 15px; }
+.kcal {
+  margin: 12px 0 0 15px;
+}
 .calorie-btn {
   padding: 6px 14px;
   display: inline-block;
 }
 .result {
-   margin: 30px 0;
-   a.calorie-btn { margin-left: 25px; }
- }
+  margin: 30px 0;
+  a.calorie-btn {
+    margin-left: 25px;
+  }
+}
 .result-number {
   width: 40px;
   padding: 3px 5px;
   border: 2px solid $brand-primary;
   color: $brand-brown-dark;
   text-align: center;
-  @include placeholder { color: $brand-brown-dark; };
- }
- .multiply { margin: 0 15px; }
+  @include placeholder {
+    color: $brand-brown-dark;
+  };
+}
+.multiply {
+  margin: 0 15px;
+}
 .count-cat {
   margin: 15px 0;
   .calorie-btn {
@@ -2221,7 +2236,9 @@ footer {
 .bmi-cal {
   margin: 30px 0;
   @extend .brand-brown-dark2;
-  .bmi-heading {  width: 70px; }
+  .bmi-heading {
+    width: 70px;
+  }
   .gender {
     padding: 6px 12px;
     background-color: #e1e1e1;
@@ -2229,7 +2246,9 @@ footer {
       margin-left: 5px;
     }
   }
-  .male { margin-right: 20px; }
+  .male {
+    margin-right: 20px;
+  }
   .age {
     width: 55px;
     border: 2px solid $brand-primary;
@@ -2243,12 +2262,18 @@ footer {
 ///end stats//
 // image consulting //
 .consulting {
-  color:$brand-gray;
+  color: $brand-gray;
   font-size: 16px;
-  .consult-head { margin: 0 0 35px; }
+  .consult-head {
+    margin: 0 0 35px;
+  }
   .service-detail {
-    .title { margin: 0; }
-    .descp { text-align: justify; }
+    .title {
+      margin: 0;
+    }
+    .descp {
+      text-align: justify;
+    }
   }
   .consult-back {
     padding: 30px 0;
@@ -2256,56 +2281,68 @@ footer {
     background-size: 100% auto;
   }
   .tina {
-    background-image: url('../img/consulting/tina.jpg');
+    background-image: url(../img/consulting/tina.jpg);
     background-size: 100% 100%;
-   }
-  .left-pattern { background-image: url('../img/consulting/left-pattern.jpg'); }
-  .right-pattern { background-image: url('../img/consulting/right-pattern.jpg'); }
-  .tagline { padding: 120px 0; }
+  }
+  .left-pattern {
+    background-image: url(../img/consulting/left-pattern.jpg);
+  }
+  .right-pattern {
+    background-image: url(../img/consulting/right-pattern.jpg);
+  }
+  .tagline {
+    padding: 120px 0;
+  }
   .tag-text {
-    h3{
+    h3 {
       font-size: 28px;
       line-height: 45px;
-      &:before{
+      &:before {
         content: "";
         width: 50px;
         height: 40px;
-        background: url('../img/consulting/tag-left.png') no-repeat;
+        background: url(../img/consulting/tag-left.png) no-repeat;
         position: absolute;
         top: 0;
         left: -20px;
       }
-      &:after{
+      &:after {
         content: "";
         width: 50px;
         height: 40px;
-        background: url('../img/consulting/tag-right.png') no-repeat;
+        background: url(../img/consulting/tag-right.png) no-repeat;
         position: absolute;
         top: 0;
         right: -20px;
       }
     }
   }
-  .service-info { margin: 30px 0; }
-  .testimonial-list { margin: 50px 0; }
+  .service-info {
+    margin: 30px 0;
+  }
+  .testimonial-list {
+    margin: 50px 0;
+  }
   .package-detail {
     ul {
       padding-left: 20px;
       li {
-      margin: 20px 0;
-      list-style-type: disc;
+        margin: 20px 0;
+        list-style-type: disc;
+      }
     }
-  }
   }
   .package-list {
     .consult-chart {
       .session {
         margin: 42px 0 5px;
-      display: block;
-     }
+        display: block;
+      }
     }
   }
-  .package-chart { margin: 30px 0; }
+  .package-chart {
+    margin: 30px 0;
+  }
   .session-charges {
     padding: 4px;
     border-radius: 6px;
@@ -2315,20 +2352,26 @@ footer {
       border-radius: 6px;
       background-color: #fff;
       text-align: center;
-      .money { font-size: 20px; }
+      .money {
+        font-size: 20px;
+      }
     }
   }
-  .session-descp { margin: 10px 0 0; }
+  .session-descp {
+    margin: 10px 0 0;
+  }
   .pack-men {
-    .session-descp { margin: 20px 0 0; }
+    .session-descp {
+      margin: 20px 0 0;
+    }
   }
   .testimonial-imgholder {
     @include square(137px);
     @extend .round;
-   img{
-     max-width: 100%;
-     max-height: 100%;
-   }
+    img {
+      max-width: 100%;
+      max-height: 100%;
+    }
   }
 }
 // end image consulting //
@@ -2338,46 +2381,70 @@ footer {
   h2 {
     color: $brand-gray;
     font-size: 40px;
-    a { color: #373737; }
+    a {
+      color: #373737;
+    }
   }
 }
 // end careers///
 ////selfcare tv///
-.tv-headline { margin: 0 0 40px; }
- .tv-main {
+.tv-headline {
+  margin: 0 0 40px;
+}
+.tv-main {
   color: $brand-gray;
- }
- .episode {
-   padding: 0 15px;
-   margin: 30px 0;
-   h4 { min-height: 40px; }
+}
+.episode {
+  padding: 0 15px;
+  margin: 30px 0;
+  h4 {
+    min-height: 40px;
   }
-  .youtube-play {
-    color: #c01d20;
-    font-size: 60px;
-  }
+}
+.youtube-play {
+  color: #c01d20;
+  font-size: 60px;
+}
 // end selfcare tv//
 // error thankyou went wrong
 .error,
 .went-wrong,
-.thankyou { margin: 60px 0; }
+.thankyou {
+  margin: 60px 0;
+}
 .error-imgholder,
-.wrong-imgholder { margin: 20px 0px 90px; }
-.error h3 { margin-bottom: 20px; }
-.err-link { padding: 12px 42px; }
-.transaction {  padding: 8px 24px; }
-.process { margin: 60px 0 15px; }
-.bag { margin: 50px 0px 90px; }
-.put-center { margin-top: 70px; }
-
+.wrong-imgholder {
+  margin: 20px 0 90px;
+}
+.error h3 {
+  margin-bottom: 20px;
+}
+.err-link {
+  padding: 12px 42px;
+}
+.transaction {
+  padding: 8px 24px;
+}
+.process {
+  margin: 60px 0 15px;
+}
+.bag {
+  margin: 50px 0 90px;
+}
+.put-center {
+  margin-top: 70px;
+}
 // end error thankyou wentwrong
-
 // account
 .profile-tab {
   @extend .checkout-main;
-  h3 { margin: 0 0 25px; }
+  h3 {
+    margin: 0 0 25px;
+  }
   .details {
-    input { margin: 0 30px 15px 0; }
+    input {
+      margin: 0 30px 15px 0;
+    }
   }
   .checkbox input[type="checkbox"] + label span {
     @include square(20px);
@@ -2389,20 +2456,22 @@ footer {
     border-width: 1px;
     border-color: $brand-primary;
     border-radius: 0;
-    margin: -17px 10px 0px;
+    margin: -17px 10px 0;
   }
   .address {
-    margin: 40px 0 0 ;
+    margin: 40px 0 0;
     .same-bill {
       padding: 0;
       font-size: 15px;
     }
-    .checkbox { margin: 0 0 15px; }
+    .checkbox {
+      margin: 0 0 15px;
+    }
     select {
       border: 2px solid $brand-primary;
       color: #555;
     }
-    .custom-select{
+    .custom-select {
       &:after {
         content: "\f107";
         width: 45px;
@@ -2410,7 +2479,7 @@ footer {
         background-color: $brand-primary;
       }
     }
-}
+  }
 }
 .account-tab {
   margin: 20px 0 0;
@@ -2432,14 +2501,42 @@ footer {
       }
     }
   }
-  .nav-tabs > li.active > a, .nav-tabs > li.active > a:hover, .nav-tabs > li.active > a:focus {
+  .nav-tabs > li.active > a,
+  .nav-tabs > li.active > a:hover,
+  .nav-tabs > li.active > a:focus {
     border: none;
     color: $brand-brown-dark;
     text-decoration: underline !important;
-   }
-   .tab-content { margin: 70px 0; }
+  }
+  .tab-content {
+    margin: 70px 0;
+  }
 }
-
+// forgot and  pop-up
+.enter-mail {
+  h2 {  padding: 20px 0;  }
+  h3 {
+    margin: 30px;
+    line-height: 28px;
+  }
+  form.forgot-form { padding: 0px 20px 30px; }
+  input {
+    border: 2px solid $brand-primary;
+    @include placeholder {
+      font-family: $font-baubodi;
+      font-weight: bold;
+      font-style: italic;
+      letter-spacing: 1px;
+    };
+  }
+  button { padding: 8px 30px; }
+}
+.forgot-main {
+  @extend .enter-mail;
+  margin: 50px 0;
+  label { font-size: 16px; }
+}
+// end forgot and popup
 @import "harsh";
 @import "mobile";
 @import "mobile_harsh";
