--- a/views/modal/login.html
+++ b/views/modal/login.html
@@ -1,129 +1,131 @@
 <div class="login-tab">
-    <uib-tabset>
-        <uib-tab heading="Sign up">
-            <div class="login-form">
-                <form name="signupForm">
-                    <div class="row">
-                        <div class="col-md-6">
-                            <div class="form-group">
-                                <input type="text" name="firstname" class="form-control" ng-model="signup.firstname" required placeholder="First Name">
-                            </div>
-                            <div class="" ng-show="signupForm.firstname.$error.required && signupForm.firstname.$touched" role="alert">
-                                Please enter your name.
-                            </div>
-                        </div>
-                        <div class="col-md-6">
-                            <div class="form-group">
-                                <input type="text" name="lastname" class="form-control"   ng-model="signup.lastname" required placeholder="Last Name">
-                            </div>
-                            <div class="" ng-show="signupForm.lastname.$error.required && signupForm.lastname.$touched" role="alert">
-                                Please enter your name.
-                            </div>
-                        </div>
-                    </div>
-                    <div class="row">
-                        <div class="col-md-6">
-                            <div class="form-group">
-                                <input type="email" name="email" class="form-control" ng-model="signup.email" required placeholder="Email">
-                            </div>
-                            <div class="" ng-show="signupForm.email.$invalid && signupForm.email.$touched" role="alert">
-                                Please enter your email properly.
-                            </div>
-
-                        </div>
-                        <div class="col-md-6">
-                            <div class="form-group">
-                                <input type="password" name="password" class="form-control" ng-model="signup.password" ng-minlength="6" required placeholder="Password">
-                            </div>
-                            <div class="" ng-show="signupForm.password.$error.required && signupForm.password.$touched" role="alert">
-                                Please enter your password.
-                            </div>
-                            <div class="" ng-show="signupForm.password.$error.minlength " role="alert">
-                                Password too short.
-                            </div>
-                        </div>
-                    </div>
-                    <div class="accept">
-                        <div class="checkbox">
-                            <input type="checkbox" ng-model="accept" class="text-uppercase" id="accept">
-                            <label for="accept" class="text-light text-uppercase">
-                                <span></span>
-                                I Accept The Terms And Conditions And Privacy Policy Of The Website
-                            </label>
-                        </div>
-                        <div class="" ng-show="acceptValidate">
-                          Please accept the terms and conditions to proceed.
-                        </div>
-                        <div class="text-center" ng-show="alreadyReg">
-                           Email ID is already registered
-                        </div>
-                    </div>
-                    <div class="text-center submit">
-                        <button class="btn btn-primary text-uppercase"  ng-click="doSignup(accept,signup,signupForm)">Signup</button>
-                    </div>
-                </form>
-                <div class="text-center text-uppercase">
-                    <span class="block or">or</span>
-                    <p>sign up via</p>
-                </div>
-                <div class="social-btn text-center">
-                    <div class="btn-round inline-block">
-                        <button type="button" class="btn fb-btn no-border round">
-                            <i class="fa fa-facebook"></i>
-                        </button>
-                    </div>
-                    <div class="btn-round inline-block">
-                        <button type="button" class="btn google-btn no-border round">
-                            <i class="fa fa-google-plus"></i>
-                        </button>
-                    </div>
-                </div>
+  <uib-tabset>
+    <uib-tab heading="Sign up">
+      <div class="login-form">
+        <form name="signupForm">
+          <div class="row">
+            <div class="col-md-6">
+              <div class="form-group">
+                <input type="text" name="firstname" class="form-control" ng-model="signup.firstname" required placeholder="First Name">
+              </div>
+              <div class="" ng-show="signupForm.firstname.$error.required && signupForm.firstname.$touched" role="alert">
+                Please enter your name.
+              </div>
             </div>
-        </uib-tab>
-        <uib-tab heading="Sign in">
-            <div class="login-form">
-                <form  name="loginForm">
-                    <div class="row">
-                        <div class="col-md-offset-3 col-md-6">
-                            <div class="form-group">
-                                <input type="email" name="email" ng-model="login.email" class="form-control" required placeholder="Email">
-                            </div>
-                            <div class="text-center" ng-show="loginForm.$invalid && loginForm.email.$dirty " role="alert">
-                                Please enter email
-                            </div>
-                            <div class="form-group">
-                                <input type="password" name="password" ng-model="login.password" class="form-control" required placeholder="Password">
-                            </div>
-                            <div class="text-center" ng-show="loginForm.$invalid && loginForm.password.$dirty" role="alert">
-                                Please enter password
-                            </div>
-                            <div class="text-center" ng-show="invalidinput" role="alert">
-                                Invalid email or password.
-                            </div>
-                            <div class="text-center submit">
-                                <button class="text-uppercase btn btn-primary" type="submit" ng-click="doLogin(login,loginForm)">Sign in</button>
-                            </div>
-
-                        </div>
-                    </div>
-                </form>
-                <div class="text-center text-uppercase">
-                    <span class="block">or</span>
-                    <p>sign up via</p>
-                </div>
-                <div class="social-btn text-center">
-                    <div class="btn-round inline-block">
-                        <button type="button" class="btn fb-btn round no-border">
-                            <i class="fa fa-facebook"></i>
-                        </button>
-                    </div>
-                    <div class="btn-round inline-block">
-                        <button type="button" class="btn google-btn round no-border">
-                            <i class="fa fa-google-plus"></i>
-                        </button>
-                    </div>
-                </div>
+            <div class="col-md-6">
+              <div class="form-group">
+                <input type="text" name="lastname" class="form-control" ng-model="signup.lastname" required placeholder="Last Name">
+              </div>
+              <div class="" ng-show="signupForm.lastname.$error.required && signupForm.lastname.$touched" role="alert">
+                Please enter your name.
+              </div>
             </div>
-        </uib-tab>
-    </uib-tabset>
+          </div>
+          <div class="row">
+            <div class="col-md-6">
+              <div class="form-group">
+                <input type="email" name="email" class="form-control" ng-model="signup.email" required placeholder="Email">
+              </div>
+              <div class="" ng-show="signupForm.email.$invalid && signupForm.email.$touched" role="alert">
+                Please enter your email properly.
+              </div>
+
+            </div>
+            <div class="col-md-6">
+              <div class="form-group">
+                <input type="password" name="password" class="form-control" ng-model="signup.password" ng-minlength="6" required placeholder="Password">
+              </div>
+              <div class="" ng-show="signupForm.password.$error.required && signupForm.password.$touched" role="alert">
+                Please enter your password.
+              </div>
+              <div class="" ng-show="signupForm.password.$error.minlength " role="alert">
+                Password too short.
+              </div>
+            </div>
+          </div>
+          <div class="accept">
+            <div class="checkbox">
+              <input type="checkbox" ng-model="accept" class="text-uppercase" id="accept">
+              <label for="accept" class="text-light text-uppercase">
+                <span></span> I Accept The Terms And Conditions And Privacy Policy Of The Website
+              </label>
+            </div>
+            <div class="" ng-show="acceptValidate">
+              Please accept the terms and conditions to proceed.
+            </div>
+            <div class="text-center" ng-show="alreadyReg">
+              Email ID is already registered
+            </div>
+          </div>
+          <div class="text-center submit">
+            <button class="btn btn-primary text-uppercase" ng-click="doSignup(accept,signup,signupForm)">Signup</button>
+          </div>
+        </form>
+        <div class="text-center text-uppercase">
+          <span class="block or">or</span>
+          <p>sign up via</p>
+        </div>
+        <div class="social-btn text-center">
+          <div class="btn-round inline-block">
+            <button type="button" class="btn fb-btn no-border round">
+              <i class="fa fa-facebook"></i>
+            </button>
+          </div>
+          <div class="btn-round inline-block">
+            <button type="button" class="btn google-btn no-border round">
+              <i class="fa fa-google-plus"></i>
+            </button>
+          </div>
+        </div>
+      </div>
+    </uib-tab>
+    <uib-tab heading="Sign in">
+      <div class="login-form">
+        <form name="loginForm">
+          <div class="row">
+            <div class="col-md-offset-3 col-md-6">
+              <div class="form-group">
+                <input type="email" name="email" ng-model="login.email" class="form-control" required placeholder="Email">
+              </div>
+              <div class="text-center" ng-show="loginForm.$invalid && loginForm.email.$dirty " role="alert">
+                Please enter email
+              </div>
+              <div class="form-group">
+                <input type="password" name="password" ng-model="login.password" class="form-control" required placeholder="Password">
+              </div>
+              <div class="text-center" ng-show="loginForm.$invalid && loginForm.password.$dirty" role="alert">
+                Please enter password
+              </div>
+              <div class="text-center" ng-show="invalidinput" role="alert">
+                Invalid email or password.
+              </div>
+              <div class="text-center">
+                <a class="" ng-click="openForgot();">Forgot Password</a>
+              </div>
+              <div class="text-center submit">
+                <button class="text-uppercase btn btn-primary" type="submit" ng-click="doLogin(login,loginForm)">Sign in</button>
+              </div>
+
+            </div>
+          </div>
+        </form>
+        <div class="text-center text-uppercase">
+          <span class="block">or</span>
+          <p>sign up via</p>
+        </div>
+        <div class="social-btn text-center">
+          <div class="btn-round inline-block">
+            <button type="button" class="btn fb-btn round no-border">
+              <i class="fa fa-facebook"></i>
+            </button>
+          </div>
+          <div class="btn-round inline-block">
+            <button type="button" class="btn google-btn round no-border">
+              <i class="fa fa-google-plus"></i>
+            </button>
+          </div>
+        </div>
+      </div>
+    </uib-tab>
+  </uib-tabset>
 </div>
