--- a/sass/_harsh.scss
+++ b/sass/_harsh.scss
@@ -75,6 +75,21 @@
   @include padding(10px 0);
   font-size: 16px;
   a { color: #cf5636; }
+  .name {
+    &:hover .account-submenu { display: block; }
+  }
+  .account-submenu {
+    width: 140px;
+    padding: 10px 15px;
+    display: none;
+    position: absolute;
+    top: auto;
+    left: 25px;
+    background-color: #fff;
+    text-align: left;
+    z-index: 1;
+    li { padding: 5px 0; }
+  }
 }
 
 // weight
