--- a/views/header.html
+++ b/views/header.html
@@ -59,7 +59,12 @@
                   <a class="text-uppercase font-semibold" href="" ng-click="openLogin();">Sign In</a>
                 </div>
                 <div class="signin letter-space text-right" ng-show="enablelogout">
-                  <a class="text-uppercase font-semibold" href="" ng-click="logout()">Logout</a>
+                  <div class="text-uppercase font-semibold relate name" href="" ng-click="logout()">Jagruti
+                    <ul class="account-submenu">
+                      <li><a ui-sref="account()" class="text-uppercase font-semibold">My profile</a></li>
+                      <li><a class="text-uppercase font-semibold" href="" ng-click="logout()">Logout</a></li>
+                    </ul>
+                  </div>
                 </div>
               </div>
             </div>
