--- a/sass/_harsh.scss
+++ b/sass/_harsh.scss
@@ -80,11 +80,11 @@
   }
   .account-submenu {
     width: 140px;
-    padding: 10px 15px;
+    padding: 30px 15px 10px;
     display: none;
     position: absolute;
     top: auto;
-    left: 25px;
+    left: 30px;
     background-color: #fff;
     text-align: left;
     z-index: 1;
