--- a/views/content/careers.html
+++ b/views/content/careers.html
@@ -5,7 +5,52 @@
   </div>
   <div class="careers-main">
     <div class="container">
-      <h2 class="text-center">If you wish to join in please contact us <a href="mailto:selfcareindia.com" class="block">@ selfcareindia.com</a></h2>
-    </div>
+      <div class="row">
+        <div class="col-md-offset-2 col-md-8">
+          <h2 class="text-center">If you wish to join the Selfcare team, please fill in the following details</h2>
+        </div>
+      </div>
+    <form action="">
+      <div class="row">
+        <div class="col-md-6">
+          <div class="form-group">
+            <input type="text" class="form-control input-placeholder" placeholder="Name">
+          </div>
+        </div>
+        <div class="col-md-6">
+          <div class="form-group">
+            <input type="email" class="form-control input-placeholder" placeholder="Email *">
+          </div>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-md-6">
+          <div class="form-group">
+            <input type="tel" class="form-control input-placeholder" placeholder="Mobile">
+          </div>
+          <div class="row">
+            <div class="col-md-8">
+              <div class="form-group">
+                <input type="file" class="form-control input-placeholder" placeholder="Upload your resume">
+              </div>
+            </div>
+            <div class="col-md-4">
+              <div class="form-group">
+                <button class="btn btn-primary">Browse</button>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-6">
+          <div class="form-group">
+            <textarea class="form-control input-placeholder" placeholder="Message"></textarea>
+          </div>
+        </div>
+      </div>
+      <div class="text-center">
+        <button class="btn btn-primary send text-uppercase letter-space">send</button>
+      </div>
+    </form>
   </div>
+</div>
 </section>
