--- a/views/content/forgotpassword.html
+++ b/views/content/forgotpassword.html
@@ -12,11 +12,11 @@
           <form action="">
             <div class="form-group">
               <label for="newpassword" class="text-uppercase letter-space">Enter new password</label>
-              <input type="password" class="form-control" id="newpassword">
+              <input type="password" class="form-control input-placeholder" id="newpassword">
             </div>
             <div class="form-group">
               <label for="re-password" class="text-uppercase letter-space">re-enter password</label>
-              <input type="password" class="form-control" id="re-password">
+              <input type="password" class="form-control input-placeholder" id="re-password">
             </div>
             <button type="button" name="button" class="btn btn-primary text-uppercase">submit</button>
           </form>
