--- a/views/modal/forgotpopup.html
+++ b/views/modal/forgotpopup.html
@@ -7,7 +7,7 @@
     <div class="col-md-offset-2 col-md-8">
       <form action="" class="text-center forgot-form">
         <div class="form-group">
-          <input type="email" class="form-control" placeholder="Email *">
+          <input type="email" class="form-control input-placeholder" placeholder="Email *">
         </div>
         <div class="form-group">
           <button type="" class="btn btn-primary">SUBMIT</button>
