--- a/views/content/thankyou.html
+++ b/views/content/thankyou.html
@@ -13,7 +13,9 @@
             </div>
           </div>
           <div class="col-md-4">
-            <img ng-src="img/cart.png" class="img-responsive m-center">
+            <div class="cart-bag-imgholder">
+              <img ng-src="img/cart.png" class="img-responsive m-center">
+            </div>
           </div>
           <div class="col-md-4">
             <div class="put-center">
