--- a/sass/_mobile.scss
+++ b/sass/_mobile.scss
@@ -1894,4 +1894,21 @@
        }
      }
   }
+  // error thankyou forgot went wrong
+  .error, .went-wrong, .thankyou {
+    margin: 30px 0;
+  .error-imgholder,
+  .wrong-imgholder,
+  .thank-imgholder, {
+    margin: 30px 0px;
+    img { width: 70%; }
+  }
+  .bag,
+  .put-center { margin:0; }
+  .cart-bag-imgholder {
+    margin: 20px 0;
+    img { width: 150px; }
+  }
+  h3 { font-size: 18px; }
+  }
 }
