--- a/views/header.html
+++ b/views/header.html
@@ -59,7 +59,7 @@
                   <a class="text-uppercase font-semibold" href="" ng-click="openLogin();">Sign In</a>
                 </div>
                 <div class="signin letter-space text-right" ng-show="enablelogout">
-                  <div class="text-uppercase font-semibold relate name brand-primary pointer" ng-click="logout()">Jagruti
+                  <div class="text-uppercase font-semibold relate name brand-primary pointer">Jagruti
                     <ul class="account-submenu">
                       <li><a ui-sref="account()" class="text-uppercase font-semibold">My profile</a></li>
                       <li><a class="text-uppercase font-semibold" href="" ng-click="logout()">Logout</a></li>
