--- a/views/content/healthmanagementdetail.html
+++ b/views/content/healthmanagementdetail.html
@@ -61,7 +61,8 @@
                     <div class="tab-foot text-right">
                       <div class="plan">
                         <span class="note font-baubodi letter-space"><sup>*</sup>inclusive of all taxes</span>
-                        <a class="white btn btn-primary text-uppercase" ng-click="cartAdd(subplan.plan)">take this plan</a>
+                        <h4 ng-show="subplan.status">Plan already taken.</h4>
+                        <a ng-hide="subplan.status" class="white btn btn-primary text-uppercase" ng-click="cartAdd(subplan.plan)">take this plan</a>
                         <p ng-if="$index==0">Silver plan rates are only applicable for online consulation.</p>
                       </div>
                     </div>
