--- a/views/content/careers.html
+++ b/views/content/careers.html
@@ -29,12 +29,12 @@
             <input type="tel" class="form-control input-placeholder" placeholder="Mobile">
           </div>
           <div class="row">
-            <div class="col-md-8">
+            <div class="col-md-8 col-sm-10">
               <div class="form-group">
-                <input type="file" class="form-control input-placeholder" placeholder="Upload your resume">
+                <input type="text" class="form-control input-placeholder" placeholder="Upload your resume">
               </div>
             </div>
-            <div class="col-md-4">
+            <div class="col-md-4 col-sm-2">
               <div class="form-group">
                 <button class="btn btn-primary">Browse</button>
               </div>
