--- a/views/content/contactus.html
+++ b/views/content/contactus.html
@@ -1,7 +1,7 @@
 <section>
   <div class="selfcare-image">
     <img src="img/banners/contactus.jpg" alt="">
-    <h2 class="text-uppercase get-center white font-gotham-bold contact-title">Contact Us</h2>
+    <h2 class="text-uppercase get-center white contact-title">Contact Us</h2>
   </div>
 
   <div class="contact-location">
@@ -53,17 +53,17 @@
 
           <div class="kolkata">
             <h4 class="text-uppercase brand-brown-dark font-semibold">Kolkata</h4>
-            <span>Ground floor, 3 Cooper street, Lane</span>
+            <span>Ground floor, 3 Cooper street,</span>
             <br>
-            <span>opposite Pulse diagnostics, Near</span>
+            <span>Lane opposite Pulse diagnostics,</span>
             <br>
-            <span>Landsome - Hazra Crossing,</span>
+            <span>Next to Landsome market</span>
             <br>
-            <span>Kolkata - 700 020</span>
+            <span>Kolkata - 7000206</span>
             <br>
             <span>t: <a href="tel:9339564578">9339564578</a></span>
             <br>
-            <a href="https://goo.gl/maps/xRzPPWJGAMB2" target="_blank" class="text-uppercase brand-teal">View Map</a>
+            <a href="https://goo.gl/maps/9qVRT1q4XyG2" target="_blank" class="text-uppercase brand-teal">View Map</a>
           </div>
         </div>
 
