--- a/views/footer.html
+++ b/views/footer.html
@@ -1,7 +1,7 @@
 <footer class="brand-primary-bg font-semibold" ng-controller="footerctrl">
     <div class="container" >
         <div class="row">
-            <div class="col-md-2 col-xs-6">
+            <div class="col-md-2 col-sm-6">
                 <div class="menu text-uppercase letter-space">
                     <ul>
                         <li><a href="#/home" title="Home">home</a></li>
@@ -15,7 +15,7 @@
                     </ul>
                 </div>
             </div>
-            <div class="col-md-3 col-xs-6">
+            <div class="col-md-3 col-sm-6">
                 <div class="menu2">
                     <h5 class="text-uppercase brand-primary-lighter letter-space">Health Packages</h5>
                     <div class="submenu text-uppercase">
@@ -36,7 +36,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-md-3 col-xs-6">
+            <div class="col-md-3 col-sm-6">
                 <div class="menu2">
                     <h5 class="brand-primary-lighter">HEALTH SHOP</h5>
                     <div class="submenu text-uppercase">
@@ -59,7 +59,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-md-4 col-xs-6">
+            <div class="col-md-4 col-sm-6">
                 <div class="">
                     <div class="note brand-primary-lighter letter-space">
                         <p>Receive monthly tips on the healthiest foods and excercizes, along with the latest plans and offers.</p>
