--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1071,6 +1071,10 @@ button {
     }
   }
 }
+.vogue-logoholder {
+  width: 180px;
+  margin: 30px auto 0;
+}
 .suman-info {
   padding: 0 30px;
   .title {
