--- a/views/content/meet.html
+++ b/views/content/meet.html
@@ -25,6 +25,9 @@
 </div>
 </div>
 <div class="container">
+  <div class="vogue-logoholder">
+    <img src="img/vogue-logo.png" alt="" class="img-responsive">
+  </div>
     <div class="about-suman">
         <div class="heading text-center">
             <h4 class="brand-yellow font-semibold">WON BEST NUTRITIONIST AWARD AT THE VOGUE BEAUTY AWARDS</h4>
