--- a/views/content/selfcaretv.html
+++ b/views/content/selfcaretv.html
@@ -6,7 +6,7 @@
   <div class="careers-main">
     <div class="container">
       <div class="tv-main">
-        <h3 class="text-center tv-headline">Browse through the videos to know more about selfcare</h3>
+        <h3 class="text-center tv-headline">Browse through the videos to know more about Selfcare</h3>
         <div class="row">
           <div class="col-md-offset-1 col-md-10">
             <div class="text-center" ng-if="selfcaretv.length <=0">
