meet suman agrawal page

--- a/sass/_mobile_harsh.scss
+++ b/sass/_mobile_harsh.scss
@@ -104,7 +104,7 @@
   .related-post .relatepost-holder { width: 100%; }
 
   // meet
-  .suman-video { height: 400px; }
+  // .suman-video { height: 400px; }
 
 }
 @media (max-width: $screen-sm-max) {
