--- a/views/content/account.html
+++ b/views/content/account.html
@@ -14,30 +14,30 @@
             <uib-tab-heading><span class="text-uppercase">my profile</span></uib-tab-heading>
             <div class="profile-tab">
               <h3 class="text-uppercase brand-brown-dark letter-space">your details</h3>
-              <form action="" class="form-inline details">
+              <form action="" name="basicForm" class="form-inline details">
                 <div class="form-group">
-                  <input type="text" placeholder="First Name *" ng-model="user.firstname" required class="form-control">
+                  <input type="text" name="firstname" required placeholder="First Name *" ng-model="user.firstname" required class="form-control">
+
                 </div>
-                <div class="" ng-show="user.firstname.$error.required && user.firstname.$touched" role="alert">
-                  Please enter your name.
-                </div>
+
                 <div class="form-group">
-                  <input type="text" placeholder="Last Name *" ng-model="user.lastname" required class="form-control">
+                  <input type="text" name="lastname" placeholder="Last Name *" ng-model="user.lastname" required class="form-control">
+
                 </div>
-                <div class="" ng-show="user.firstname.$error.required && user.firstname.$touched" role="alert">
-                  Please enter your name.
-                </div>
+
                 <div class="form-group">
-                  <input type="tel" placeholder="Mobile Number *" ng-model="user.phone" class="form-control">
+                  <input type="tel" required placeholder="Mobile Number *" ng-model="user.phone" class="form-control">
                 </div>
                 <div class="form-group">
-                  <input type="email" placeholder="Email *" ng-model="user.email" required class="form-control">
+                  <input type="email" required name="email" placeholder="Email *" ng-model="user.email" required class="form-control">
+
                 </div>
-                <div class="" ng-show="user.firstname.$error.required && user.firstname.$touched" role="alert">
-                  Please enter your name.
-                </div>
+
                 <div class="form-group">
                   <button class="btn btn-primary-inverse edit text-uppercase" type="button" ng-click="updateUser(selectedBillingCountry,selectedShippingCountry)">Edit</button>
+                </div>
+                <div class="text-center" ng-show="error">
+                  Please enter firstname,lastname and email
                 </div>
               </form>
               <div class="address">
@@ -139,7 +139,10 @@
           </uib-tab>
           <uib-tab>
             <uib-tab-heading><span class="text-uppercase">order list</span></uib-tab-heading>
-            <div class="order-tab">
+            <div class="relate no-plan" ng-if="orders==''">
+              <h3 class="get-center brand-brown-dark">No Orders</h3>
+            </div>
+            <div class="order-tab" ng-if="orders!=''">
               <div class="cart-table">
                 <table class="table">
                   <thead class="brand-brown-dark brand-brown-bg text-uppercase letter-space">
@@ -151,24 +154,24 @@
                     </tr>
                   </thead>
                   <tbody>
-                    <tr class="text-center letter-space font-semibold">
+                    <tr class="text-center letter-space font-semibold" ng-repeat="order in orders">
                       <td>
-                        <span>AH1459664</span>
+                        <span>{{order.order}}</span>
                       </td>
                       <td>
                         <figure  class="pointer">
                           <div class="cart-imgholder m-center round">
-                          <img src="img/cart/1.jpg" alt="" class="img-responsive">
+                          <img ng-src="{{order.image | serverimage}}" alt="" class="img-responsive">
                           </div>
-                          <figcaption class="text-center text-uppercase">Chana jhor</figcaption>
+                          <figcaption class="text-center text-uppercase">{{order.name}}</figcaption>
                         </figure>
                       </td>
                       <td>
-                        <span>1</span>
+                        <span>{{order.quantity}}</span>
                       </td>
                       <td>
                         <div class="cart-total-amount">
-                        <p>RS. 225.00</p>
+                        <p>RS. {{order.price}}</p>
                       </div>
                         <div class="remove text-right">
                           <button class="btn btn-primary text-uppercase no-radius">print invoice</button>
@@ -178,10 +181,10 @@
                   </tbody>
                 </table>
 
-                <div class="cart-grand-total clearfix brand-brown-bg brand-brown-dark font-semibold">
+                <!-- <div class="cart-grand-total clearfix brand-brown-bg brand-brown-dark font-semibold">
                   <span class="text-uppercase pull-left">Grand Total</span>
                   <span class="pull-right text-uppercase">Rs. 375.00</span>
-                </div>
+                </div> -->
               </div>
             </div>
           </uib-tab>
