--- a/sass/_mobile.scss
+++ b/sass/_mobile.scss
@@ -77,12 +77,15 @@
     }
   }
   .tab-body .pricing {
-  bottom: -60px;
+  // bottom: -60px;
+  margin: 20px 0 0;
+  position: static;
   span {
     font-size: 20px;
   }
 }
   .tab-foot {
+    margin: 10px 0 0;
     .plan {
       display: block;
     }
@@ -917,7 +920,6 @@
         }
       }
       .pricing {
-        position: static;
         span { font-size: 16px; }
       }
     }
