about us little change

--- a/views/content/aboutus.html
+++ b/views/content/aboutus.html
@@ -60,7 +60,7 @@
           <div class="we-do-topics">
             <div class="we-do-title">
               <img src="img/about/sculpting.png" alt="" class="img-responsive">
-              <h3 class="text-uppercase brand-primary font-semibold"><a href="#/coolsculpting" class="brand-primary">Cool<span>Sculpting</span></a></h3>
+              <h3 class="text-uppercase brand-primary font-semibold">Cool<span>Sculpting</span></h3>
             </div>
             <p>Cool Sculpting is a leading fat loss technology that has set new standards for non-invasive fat reduction.</p>
           </div>
@@ -104,7 +104,7 @@
           <div class="we-do-topics">
             <div class="we-do-title about-nutri">
               <img src="img/about/dna.png" alt="" class="img-responsive">
-              <h3 class="text-uppercase brand-primary font-semibold"><a href="#/nutrigenomics" class="brand-primary">Nutrigenomics</a></h3>
+              <h3 class="text-uppercase brand-primary font-semibold">Nutrigenomics</h3>
             </div>
             <p>Synchronising our unique DNA blueprint with our diet and lifestyle, known as nutrigenomics, is the key to the exciting new realm of personalised wellness medicine</p>
           </div>
@@ -126,7 +126,7 @@
           <div class="we-do-topics">
             <div class="we-do-title">
               <img src="img/about/consulting.png" alt="" class="img-responsive">
-              <h3 class="text-uppercase brand-primary font-semibold"><a href="#/imageconsulting" class="brand-primary">Image<span>Consulting</span></a></h3>
+              <h3 class="text-uppercase brand-primary font-semibold">Image<span>Consulting</span></h3>
             </div>
             <p>A Reflection of our personality, our visual appearance creates the first &amp; lasting impression on the opposite person’s mind.</p>
           </div>
